--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -13,7 +13,14 @@
 
 .content {
     flex: 1;
-    padding: 20px 30px 20px 10px;
+    padding: calc(10px + 1vw );
     width: 100%;
     height: 100%;
+    background-color: rgb(230, 228, 228);
   }
+
+@media only screen and (min-width:600px) {
+  .content {
+    padding: calc(40px + 3vw );
+  }
+}
