--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -13,7 +13,7 @@
 
 .content {
     flex: 1;
-    padding: calc(10px + 1vw );
+    padding: calc(10px + .8vw );
     width: 100%;
     height: 100%;
     background-color: rgb(230, 228, 228);
