--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -48,10 +51,16 @@ h1, h2, h3, h4, h5 {
 p {
   color: #161538;
   line-height: 1.6;
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+span {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .dark p {
-  color: #adadad;
+  color: #cfcbcb;
 }
 
 .dark a {
