--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -50,3 +50,51 @@
     color: #fc0;
     background-color: inherit;
 }
+
+.modal {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(107, 96, 96, 0.692);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .dark .modal-content {
+    background-color: rgb(35, 30, 41);
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .modal-content {
+    background-color: rgb(253, 253, 253) ;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    background-color: currentColor;
+    cursor: pointer;
+    background-color: rgb(226, 221, 221);
+    padding: 5px;
+    border-radius: 4px;
+  }
+  
+  .close:hover {
+    color:white;
+  }
+  
